# frontier_exploration

frontier_exploration/: CHANGELOG.rst  CMakeLists.txt
frontier_exploration/include/frontier_exploration/: bounded_explore_layer.hpp  frontier_search.hpp
frontier_exploration/launch/: all.launch.py  client.launch.py  exploration.launch.py  marker_config.rviz  view_robot.launch.py
frontier_exploration/params/: exploration_params.yaml
frontier_exploration/plugins/: bounded_explore_layer.cpp
frontier_exploration/src/: explore_client.cpp  explore_server.cpp  frontier_search.cpp  polygon_point_publisher.cpp
frontier_msgs/: CMakeLists.txt
